feat: Aumenta a cobertura de testes do frontend para 95%
- Atualiza o `plano-cobertura.md` para refletir a cobertura atual e a nova estratégia.
- Adiciona uma nova suíte de testes para o `axios-setup.ts` para cobrir os interceptores de erro.
- Expande significativamente os testes para os stores `atividades` e `processos`, com foco nos caminhos de tratamento de erro e ações não testadas anteriormente.
- Adiciona testes de tratamento de erro abrangentes para o `atividadeService.ts`.
- Atinge uma cobertura de testes geral de 95.84%.